2018-03-27  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSPrivate.h:
	* Source/NSDebug.m:
	* Source/NSException.m:
	* Source/NSThread.m:
	Move stack info code from NSDebug to NSException so its all in one
	place and.  Make thread call stack addresses method use windows code
	as well as libbacktrace.

2018-03-26  Richard Frith-Macdonald <rfm@gnu.org>

        * Source/NSDebug.m:
	Avoid recursion in lock tracing when using memory allocation stats.
	* Source/NSObject.m:
	Make gnustep_global_lock an untraced lock to avoid recursion issues
	when tracing.

2018-03-26  Richard Frith-Macdonald <rfm@gnu.org>

        * Headers/Foundation/NSLock.h:
        * Headers/Foundation/NSThread.h:
        * Source/GSPrivate.h:
        * Source/NSLock.m:
        * Source/NSThread.m:
	Experimental code to add support for tracing locks held by different
	threads and to report deadlock situations where threads have
	obtained locks in the wrong order and can never proceed.

2018-03-26  Richard Frith-Macdonald <rfm@gnu.org>

	Source/NSBundle.m:
	Source/NSOperation.m:
	Give locks names to ease debugging

	Source/NSObject.m:
	Source/NSZone.m:
	Updates to use pthread mutexes directly rather than NSLock objects
	in key places for performance.

2018-03-26  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSPThread.h:
	* Source/GSException.m:
	Optimise generation of stack traces to store them in a single simple
	malloced buffer and only generate an NSArray of return addresses if
	actually requested.  Also adjust output of stack trace to exclude the
	top few frames involved in generation of the trace, so we see only
	the frames of interest.

2018-03-16  Richard Frith-Macdonald <rfm@gnu.org>

	* Headers/Foundation/NSLock.h: Expose pointer to function handling
	logging of deadlocks.
	* Source/NSLock.m: Indirect via pointer so apps can intercept the
	logging of deadlocks.
	* Source/GSHTTPURLHandle.m: Provide more detailed debug logging.