@@ -4,9 +4,10 @@
 	* Source/NSDebug.m:
 	* Source/NSException.m:
 	* Source/NSThread.m:
+	* Headers/Foundation/NSThread.h:
 	Move stack info code from NSDebug to NSException so its all in one
 	place and.  Make thread call stack addresses method use windows code
-	as well as libbacktrace.
+	as well as libbacktrace.  Remove unused method.
 
 2018-03-26  Richard Frith-Macdonald <rfm@gnu.org>
 
